# AI_CAR_PROJECT_PROTOTYPE

./: README.md
autojoy/: CMakeLists.txt  package.xml
autojoy/launch/: lidar.launch  rplidar.launch
autojoy/msg/: ControlMsg.msg  DetectMsg.msg  JoyMsg.msg  LidarMsg.msg  TrafficMsg.msg  carAccMsg.msg
autojoy/src/: ACC_Car.cpp  LidarDetect.cpp  carControl.cpp  carDetect.cpp  joyStick.cpp  motorControl.cpp
darknet_ros/: README.md
darknet_ros/darknet_ros/launch/: darknet_ros.launch
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
darknet_ros/darknet_ros/yolo_network_config/weights/: README.md
hector_slam/hector_mapping/launch/: mapping_default.launch
hls_lfcd_lds_driver/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini
hls_lfcd_lds_driver/atomic_configure/: local_setup.sh  setup.sh
hls_lfcd_lds_driver/catkin_generated/: generate_cached_setup.py  setup_cached.sh
hls_lfcd_lds_driver/msg/: stopMsg.msg
hls_lfcd_lds_driver/src/: hlds_laser_subscriber.cpp
ros_opencv_try/: CMakeLists.txt
ros_opencv_try/include/: OpenCV_Utils.cpp
ros_opencv_try/src/: opencv_subscriber.cpp  ros_traffic_light.cpp  traffic_sign.cpp
usb_cam/nodes/: usb_cam_node.cpp
