<?xml version="1.0"?>
<package format="2">
  <name>autojoy</name>
  <version>1.1.0</version>
  <description>The autojoy package</description>
  <maintainer email="dl11010@naver.com">LEE</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>darknet_ros</build_depend>
  <build_depend>darknet_ros_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>darknet_ros</build_export_depend>
  <build_export_depend>darknet_ros_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>darknet_ros</exec_depend>
  <exec_depend>darknet_ros_msgs</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>boost</depend>
  <export>
  </export>
</package>
